log
Fri 10 May 2024 09:14:00 PM UTC: 
 tests:  1|8
total_score: 0/70
5208219
Fri 10 May 2024 09:17:12 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
0ed58f6
Fri 10 May 2024 09:42:57 PM UTC: 
 treemap.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 49 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:31: error: expected ‘;’ before ‘Datos’
   53 |     Datos->pair->value = value
      |                               ^
      |                               ;
   54 |     Datos->left = NULL;
      |     ~~~~~                      
treemap.c:64:15: error: ‘True’ undeclared (first use in this function)
   64 |         while(True)
      |               ^~~~
treemap.c:64:15: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:76:17: error: expected expression before ‘}’ token
   76 |                 }
      |                 ^
Compilation failed
820dfce
Fri 10 May 2024 09:44:36 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:2:10: fatal error: bool.h: No such file or directory
    2 | #include <bool.h>
      |          ^~~~~~~~
compilation terminated.
Compilation failed
e75b0a1
Fri 10 May 2024 09:45:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:65:15: error: ‘True’ undeclared (first use in this function); did you mean ‘true’?
   65 |         while(True)
      |               ^~~~
      |               true
treemap.c:65:15: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:77:17: error: expected expression before ‘}’ token
   77 |                 }
      |                 ^
Compilation failed
f201de1
Fri 10 May 2024 09:46:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:77:17: error: expected expression before ‘}’ token
   77 |                 }
      |                 ^
Compilation failed
73fab00
Fri 10 May 2024 09:46:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d23e2bb
Fri 10 May 2024 09:51:01 PM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  4|7
total_score: 5/70
38e5f9b
Fri 10 May 2024 10:41:03 PM UTC: 
 treemap.c | 38 +++++++++++++++++---------------------
 1 file changed, 17 insertions(+), 21 deletions(-)
 tests:  5|7
total_score: 5/70
1c79808
Fri 10 May 2024 10:43:37 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:70:50: error: expected ‘;’ before ‘return’
   70 |                         tree->current = aux->left
      |                                                  ^
      |                                                  ;
   71 |                         return;
      |                         ~~~~~~                    
Compilation failed
a2cbe9f
Fri 10 May 2024 10:44:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
27694fd
Sat 11 May 2024 11:38:17 AM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  7|6
total_score: 15/70
2f3d95d
Sat 11 May 2024 11:40:18 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
8bb0d58
Sat 11 May 2024 11:53:53 AM UTC: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
8100d62
Sat 11 May 2024 11:58:34 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
be0b3f9
Sat 11 May 2024 11:59:36 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
2e02c6c
Sat 11 May 2024 12:00:50 PM UTC: 
 treemap.c | 21 +++------------------
 1 file changed, 3 insertions(+), 18 deletions(-)
 tests:  15|4
total_score: 25/70
3cad03c
Sat 11 May 2024 12:32:05 PM UTC: 
 treemap.c | 53 ++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 50 insertions(+), 3 deletions(-)
 tests:  16|4
total_score: 30/70
38df7b2
Sat 11 May 2024 12:32:28 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  16|4
total_score: 30/70
71348c5
Sat 11 May 2024 12:38:12 PM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++----------
 1 file changed, 32 insertions(+), 10 deletions(-)
 tests:  17|4
total_score: 35/70
7f32b45
Sat 11 May 2024 12:48:53 PM UTC: 
 treemap.c | 36 ++++++++++--------------------------
 1 file changed, 10 insertions(+), 26 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:155:19: error: expected ‘;’ before ‘}’ token
  155 |         free(node)
      |                   ^
      |                   ;
  156 |     }
      |     ~              
Compilation failed
7717644
Sat 11 May 2024 12:49:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
791eebf
Sat 11 May 2024 12:53:04 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
ded543a
Sat 11 May 2024 12:58:00 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:164:9: error: expected ‘,’ or ‘;’ before ‘removeNode’
  164 |         removeNode(tree, aux);
      |         ^~~~~~~~~~
Compilation failed
6a6217e
Sat 11 May 2024 12:58:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
457afd2
Sat 11 May 2024 01:01:04 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  19|3
total_score: 40/70
9d35cdc
Sat 11 May 2024 01:03:15 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  19|3
total_score: 40/70
6118b15
Sat 11 May 2024 01:15:10 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
ba507c3
Sat 11 May 2024 01:16:18 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
4f2b548
Sat 11 May 2024 01:16:56 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
cf530c8
Sat 11 May 2024 01:17:17 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  20|2
total_score: 45/70
8631a8d
Sat 11 May 2024 01:37:34 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
d16b64e
Sat 11 May 2024 01:38:34 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  23|2
total_score: 50/70
0a92dc1
Sat 11 May 2024 01:40:17 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  23|2
total_score: 50/70
7660f6b
Sat 11 May 2024 01:48:23 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  23|2
total_score: 50/70
25471ad
Sat 11 May 2024 01:49:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
6a991f3
Sat 11 May 2024 01:50:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
b20173d
Sat 11 May 2024 01:59:43 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
e5f90e7
